# pySigma-validators-sigmaHQ

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml  schema.yml  test.yml
json-schema/: schema_sigmahq_windows_eventid.json  schema_sigmahq_windows_provider.json
sigma/validators/sigmahq/: __init__.py  author.py  condition.py  config.py  correlation.py  date.py  description.py  detection.py  falsepositive.py  field.py  fieldname.py  fields.py  filename.py  helper.py  level.py  logsource.py  metadata.py  modifier.py  references.py  sigmahq_data.py  status.py  tags.py  title.py
tests/: conftest.py  test_config.py  test_detection.py  test_field.py
tests/detection/: test_SigmahqCategoryEventIdValidator.py  test_SigmahqCategoryWindowsProviderNameValidator.py  test_SigmahqUnsupportedRegexGroupConstructValidator.py
tests/field/: test_SigmahqFieldDuplicateValueValidator.py  test_SigmahqFieldUserValidator.py  test_SigmahqFieldnameCastValidator.py  test_SigmahqInvalidAllModifierValidator.py  test_SigmahqInvalidFieldnameValidator.py  test_SigmahqInvalidHashKvValidator.py  test_SigmahqRedundantFieldValidator.py  test_SigmahqSpaceFieldNameValidator.py
tests/filename/: test_SigmahqCorrelationFilenamePrefixValidator.py  test_SigmahqFilenameConventionValidator.py  test_SigmahqFilenamePrefixValidator.py
tests/logsource/: test_SigmahqLogsourceUnknownValidator.py  test_SigmahqSysmonMissingEventidValidator.py
tests/metadata/: test_SigmahqAuthorExistenceValidator.py  test_SigmahqDateExistenceValidator.py  test_SigmahqDescriptionExistenceValidator.py  test_SigmahqDescriptionLengthValidator.py  test_SigmahqFalsepositivesBannedWordValidator.py  test_SigmahqFalsepositivesCapitalValidator.py  test_SigmahqFalsepositivesTypoWordValidator.py  test_SigmahqGithubLinkValidator.py  test_SigmahqLevelExistenceValidator.py  test_SigmahqLinkInDescriptionValidator.py  test_SigmahqMitreLinkValidator.py  test_SigmahqModifiedDateOrderValidator.py  test_SigmahqModifiedWithoutDateValidator.py  test_SigmahqRedundantModifiedValidator.py  test_SigmahqStatusExistenceValidator.py  test_SigmahqStatusToHighValidator.py  test_SigmahqStatusValidator.py  test_SigmahqUnknownFieldValidator.py
tests/sigmahq/author/: test_sigmahq_author_existence_validator.py
tests/sigmahq/condition/: test_sigmahq_missing_asterisk_condition_validator.py  test_sigmahq_ofselection_condition_validator.py  test_sigmahq_ofthem_condition_validator.py
tests/tags/: test_SigmahqTagsDetectionValidator.py  test_SigmahqTagsTechniquesWithoutTacticsValidator.py  test_SigmahqTagsTlpValidator.py  test_SigmahqTagsUniqueDetectionValidator.py  test_SigmahqTagsUniqueTlpValidator.py
tests/title/: test_SigmahqTitleCaseValidator.py  test_SigmahqTitleDotEndValidator.py  test_SigmahqTitleLengthValidator.py  test_SigmahqTitleStartValidator.py  test_SigmahqTitleTrailingWhitespaceValidator.py
tools/: update_ref.py
(+55 files in other folders)
