[tool.poetry]
name = "pySigma-validators-sigmahq"
version = "0.6.0"
description = "pySigma SigmaHQ validators"
authors = ["François Hubaut <frack113@users.noreply.github.com>"]
license = "LGPL-2.1-only"
readme = "README.md"
repository = "https://github.com/SigmaHQ/pySigma_validators_sigmaHQ"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pysigma = ">=0.11,<0.12"

[tool.poetry.group.dev.dependencies]
black = ">=24.0,<25.0"
coverage = ">=7.0,<8.0"
defusedxml = ">=0.7,<0.8"
pytest = ">=8.0,<9.0"
pytest-cov = ">=4.0,<5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
